[package]
name = "retty"
version = "0.1.0"
authors = ["lgphp <lgphp2019@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = "0.6.23"
chashmap = "2.2.0"
bytebuf-rs = { git = "https://github.com/lgphp/bytebuf-rs" }
#chrono = "0.4.19"
rayon = "1.5"
rayon-core = "1.9.1"
crossbeam = "0.8"
chrono = "0.4.19"
uuid = { version = "0.8", features = ["serde", "v4"] }